// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/ServiceAssurance/Gameqoo/Detail render 1`] = `
<React.Fragment>
  <Detail
    action={Array []}
    breadcrumb={
      Array [
        Object {
          "label": "GameQoo",
          "url": "/service-assurance-gameqoo",
        },
        Object {
          "label": "123",
        },
      ]
    }
    filter={Array []}
    loading={false}
    notFound={true}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "Reference ID",
                    "name": "referenceId",
                  },
                  Object {
                    "label": "Ticket Number",
                    "name": "ticketId",
                  },
                  Object {
                    "label": "Product Name",
                    "name": "productName",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "Created Date",
                    "name": "createdAt",
                  },
                ],
              },
              "title": "Ticket Detail",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "VOUCHER CODE",
                    "name": "voucherCode",
                  },
                  Object {
                    "grid": 12,
                    "label": "TROUBLE TYPE",
                    "name": "troubleType",
                  },
                  Object {
                    "grid": 12,
                    "label": "TROUBLE DESCRIPTION",
                    "name": "troubleDesc",
                  },
                ],
              },
              "title": "Report Description",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "label": "SALESFORCE CATEGORY",
                    "name": "sfCategory",
                  },
                  Object {
                    "label": "SALESFORCE SUBCATEGORY",
                    "name": "sfSubCategory",
                  },
                ],
              },
              "title": "Salesforce Data",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "Reference ID",
                    "name": "referenceId",
                  },
                  Object {
                    "label": "Service ID",
                    "name": "serviceId",
                  },
                  Object {
                    "label": "Ticket Number",
                    "name": "ticketId",
                  },
                  Object {
                    "label": "First Call Resolution",
                    "name": "firstCall",
                  },
                  Object {
                    "label": "Product",
                    "name": "productName",
                  },
                  Object {
                    "grid": 12,
                    "label": "Address",
                    "name": "serviceLocation",
                  },
                ],
              },
              "title": "Service Information",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "label": "PIC Name",
                    "name": "picName",
                  },
                  Object {
                    "label": "PIC Contact",
                    "name": "picPhoneNumber",
                  },
                  Object {
                    "grid": 12,
                    "label": "PIC Address",
                    "name": "picAddress",
                  },
                ],
              },
              "title": "PIC Customer",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "converter": [Function],
                    "label": "Urgency",
                    "name": "urgency",
                  },
                  Object {
                    "converter": [Function],
                    "label": "Hard Complain",
                    "name": "hardComplaint",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "Symptoms",
                    "name": "symptompName",
                  },
                  Object {
                    "grid": 12,
                    "label": "Description",
                    "name": "descValidation",
                  },
                  Object {
                    "grid": 12,
                    "label": "OCC's Note",
                    "name": "occNoteValidation",
                  },
                ],
              },
              "title": "Fault Information",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "label": "PIC Name",
                    "name": "picName2",
                  },
                  Object {
                    "label": "PIC Contact",
                    "name": "picNumber2",
                  },
                ],
              },
              "title": "PIC Internal",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Array [],
                "schema": Array [
                  Object {
                    "label": "",
                    "name": "evidenceFiles",
                  },
                ],
              },
              "title": "Evidence",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "active": undefined,
                "errors": null,
                "errorsLabel": null,
                "steps": Array [
                  "Report Checking",
                  "Report Issued",
                  "Fault Analysis",
                  "Fault Handling",
                  "Report Completion",
                  "Report Completed",
                ],
              },
              "title": "Fault Handling Step",
              "type": "stepper",
            },
            Object {
              "properties": Object {
                "data": undefined,
              },
              "title": "History Work Log",
              "type": "worklog",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
          "stickRight": true,
        },
      ]
    }
    search={null}
    status={null}
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <ReturnForm
    fetchDetail={[MockFunction]}
    modalReturn={null}
    setModalReturn={[MockFunction]}
  />
  <ApproveIssueForm
    modalApproveIssue={null}
    setModalApproveIssue={[MockFunction]}
    setModalChooseCategory={[MockFunction]}
  />
  <ChooseCategoryForm
    fetchDetail={[MockFunction]}
    modalChooseCategory={null}
    setModalChooseCategory={[MockFunction]}
  />
</React.Fragment>
`;

exports[`src/containers/ServiceAssurance/Gameqoo/Detail render no id 1`] = `
<React.Fragment>
  <Detail
    action={Array []}
    breadcrumb={
      Array [
        Object {
          "label": "GameQoo",
          "url": "/service-assurance-gameqoo",
        },
        Object {
          "label": "-",
        },
      ]
    }
    filter={Array []}
    loading={false}
    notFound={true}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "Reference ID",
                    "name": "referenceId",
                  },
                  Object {
                    "label": "Ticket Number",
                    "name": "ticketId",
                  },
                  Object {
                    "label": "Product Name",
                    "name": "productName",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "Created Date",
                    "name": "createdAt",
                  },
                ],
              },
              "title": "Ticket Detail",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "VOUCHER CODE",
                    "name": "voucherCode",
                  },
                  Object {
                    "grid": 12,
                    "label": "TROUBLE TYPE",
                    "name": "troubleType",
                  },
                  Object {
                    "grid": 12,
                    "label": "TROUBLE DESCRIPTION",
                    "name": "troubleDesc",
                  },
                ],
              },
              "title": "Report Description",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "label": "SALESFORCE CATEGORY",
                    "name": "sfCategory",
                  },
                  Object {
                    "label": "SALESFORCE SUBCATEGORY",
                    "name": "sfSubCategory",
                  },
                ],
              },
              "title": "Salesforce Data",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "Reference ID",
                    "name": "referenceId",
                  },
                  Object {
                    "label": "Service ID",
                    "name": "serviceId",
                  },
                  Object {
                    "label": "Ticket Number",
                    "name": "ticketId",
                  },
                  Object {
                    "label": "First Call Resolution",
                    "name": "firstCall",
                  },
                  Object {
                    "label": "Product",
                    "name": "productName",
                  },
                  Object {
                    "grid": 12,
                    "label": "Address",
                    "name": "serviceLocation",
                  },
                ],
              },
              "title": "Service Information",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "label": "PIC Name",
                    "name": "picName",
                  },
                  Object {
                    "label": "PIC Contact",
                    "name": "picPhoneNumber",
                  },
                  Object {
                    "grid": 12,
                    "label": "PIC Address",
                    "name": "picAddress",
                  },
                ],
              },
              "title": "PIC Customer",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "converter": [Function],
                    "label": "Urgency",
                    "name": "urgency",
                  },
                  Object {
                    "converter": [Function],
                    "label": "Hard Complain",
                    "name": "hardComplaint",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "Symptoms",
                    "name": "symptompName",
                  },
                  Object {
                    "grid": 12,
                    "label": "Description",
                    "name": "descValidation",
                  },
                  Object {
                    "grid": 12,
                    "label": "OCC's Note",
                    "name": "occNoteValidation",
                  },
                ],
              },
              "title": "Fault Information",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "label": "PIC Name",
                    "name": "picName2",
                  },
                  Object {
                    "label": "PIC Contact",
                    "name": "picNumber2",
                  },
                ],
              },
              "title": "PIC Internal",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Array [],
                "schema": Array [
                  Object {
                    "label": "",
                    "name": "evidenceFiles",
                  },
                ],
              },
              "title": "Evidence",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "active": undefined,
                "errors": null,
                "errorsLabel": null,
                "steps": Array [
                  "Report Checking",
                  "Report Issued",
                  "Fault Analysis",
                  "Fault Handling",
                  "Report Completion",
                  "Report Completed",
                ],
              },
              "title": "Fault Handling Step",
              "type": "stepper",
            },
            Object {
              "properties": Object {
                "data": undefined,
              },
              "title": "History Work Log",
              "type": "worklog",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
          "stickRight": true,
        },
      ]
    }
    search={null}
    status={null}
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <ReturnForm
    fetchDetail={[MockFunction]}
    modalReturn={null}
    setModalReturn={[MockFunction]}
  />
  <ApproveIssueForm
    modalApproveIssue={null}
    setModalApproveIssue={[MockFunction]}
    setModalChooseCategory={[MockFunction]}
  />
  <ChooseCategoryForm
    fetchDetail={[MockFunction]}
    modalChooseCategory={null}
    setModalChooseCategory={[MockFunction]}
  />
</React.Fragment>
`;

exports[`src/containers/ServiceAssurance/Gameqoo/Detail render status checking no feature 1`] = `
<React.Fragment>
  <Detail
    action={Array []}
    breadcrumb={
      Array [
        Object {
          "label": "GameQoo",
          "url": "/service-assurance-gameqoo",
        },
        Object {
          "label": "123",
        },
      ]
    }
    filter={Array []}
    loading={false}
    notFound={false}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": Object {
                  "status": "Checking",
                },
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "Reference ID",
                    "name": "referenceId",
                  },
                  Object {
                    "label": "Ticket Number",
                    "name": "ticketId",
                  },
                  Object {
                    "label": "Product Name",
                    "name": "productName",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "Created Date",
                    "name": "createdAt",
                  },
                ],
              },
              "title": "Ticket Detail",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": Object {
                  "status": "Checking",
                },
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "VOUCHER CODE",
                    "name": "voucherCode",
                  },
                  Object {
                    "grid": 12,
                    "label": "TROUBLE TYPE",
                    "name": "troubleType",
                  },
                  Object {
                    "grid": 12,
                    "label": "TROUBLE DESCRIPTION",
                    "name": "troubleDesc",
                  },
                ],
              },
              "title": "Report Description",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {
                  "status": "Checking",
                },
                "schema": Array [
                  Object {
                    "label": "SALESFORCE CATEGORY",
                    "name": "sfCategory",
                  },
                  Object {
                    "label": "SALESFORCE SUBCATEGORY",
                    "name": "sfSubCategory",
                  },
                ],
              },
              "title": "Salesforce Data",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {
                  "status": "Checking",
                },
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "Reference ID",
                    "name": "referenceId",
                  },
                  Object {
                    "label": "Service ID",
                    "name": "serviceId",
                  },
                  Object {
                    "label": "Ticket Number",
                    "name": "ticketId",
                  },
                  Object {
                    "label": "First Call Resolution",
                    "name": "firstCall",
                  },
                  Object {
                    "label": "Product",
                    "name": "productName",
                  },
                  Object {
                    "grid": 12,
                    "label": "Address",
                    "name": "serviceLocation",
                  },
                ],
              },
              "title": "Service Information",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": Object {
                  "status": "Checking",
                },
                "schema": Array [
                  Object {
                    "label": "PIC Name",
                    "name": "picName",
                  },
                  Object {
                    "label": "PIC Contact",
                    "name": "picPhoneNumber",
                  },
                  Object {
                    "grid": 12,
                    "label": "PIC Address",
                    "name": "picAddress",
                  },
                ],
              },
              "title": "PIC Customer",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {
                  "status": "Checking",
                },
                "schema": Array [
                  Object {
                    "converter": [Function],
                    "label": "Urgency",
                    "name": "urgency",
                  },
                  Object {
                    "converter": [Function],
                    "label": "Hard Complain",
                    "name": "hardComplaint",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "Symptoms",
                    "name": "symptompName",
                  },
                  Object {
                    "grid": 12,
                    "label": "Description",
                    "name": "descValidation",
                  },
                  Object {
                    "grid": 12,
                    "label": "OCC's Note",
                    "name": "occNoteValidation",
                  },
                ],
              },
              "title": "Fault Information",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {
                  "status": "Checking",
                },
                "schema": Array [
                  Object {
                    "label": "PIC Name",
                    "name": "picName2",
                  },
                  Object {
                    "label": "PIC Contact",
                    "name": "picNumber2",
                  },
                ],
              },
              "title": "PIC Internal",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {
                  "status": "Checking",
                },
                "schema": Array [
                  Object {
                    "label": "",
                    "name": "evidenceFiles",
                  },
                ],
              },
              "title": "Evidence",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "active": 0,
                "errors": null,
                "errorsLabel": null,
                "steps": Array [
                  "Report Checking",
                  "Report Issued",
                  "Fault Analysis",
                  "Fault Handling",
                  "Report Completion",
                  "Report Completed",
                ],
              },
              "title": "Fault Handling Step",
              "type": "stepper",
            },
            Object {
              "properties": Object {
                "data": undefined,
              },
              "title": "History Work Log",
              "type": "worklog",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
          "stickRight": true,
        },
      ]
    }
    search={null}
    status={
      Object {
        "children": "REPORT CHECKING",
        "variant": "primary",
      }
    }
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <ReturnForm
    fetchDetail={[MockFunction]}
    modalReturn={null}
    setModalReturn={[MockFunction]}
  />
  <ApproveIssueForm
    modalApproveIssue={null}
    setModalApproveIssue={[MockFunction]}
    setModalChooseCategory={[MockFunction]}
  />
  <ChooseCategoryForm
    fetchDetail={[MockFunction]}
    modalChooseCategory={null}
    setModalChooseCategory={[MockFunction]}
  />
</React.Fragment>
`;

exports[`src/containers/ServiceAssurance/Gameqoo/Detail render status checking with feature 1`] = `
<React.Fragment>
  <Detail
    action={
      Array [
        Object {
          "children": "REJECT",
          "onClick": undefined,
          "variant": "ghost",
        },
        Object {
          "children": "APPROVE",
          "onClick": undefined,
        },
      ]
    }
    breadcrumb={
      Array [
        Object {
          "label": "GameQoo",
          "url": "/service-assurance-gameqoo",
        },
        Object {
          "label": "123",
        },
      ]
    }
    filter={Array []}
    loading={false}
    notFound={false}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": Object {
                  "status": "Checking",
                },
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "Reference ID",
                    "name": "referenceId",
                  },
                  Object {
                    "label": "Ticket Number",
                    "name": "ticketId",
                  },
                  Object {
                    "label": "Product Name",
                    "name": "productName",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "Created Date",
                    "name": "createdAt",
                  },
                ],
              },
              "title": "Ticket Detail",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": Object {
                  "status": "Checking",
                },
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "VOUCHER CODE",
                    "name": "voucherCode",
                  },
                  Object {
                    "grid": 12,
                    "label": "TROUBLE TYPE",
                    "name": "troubleType",
                  },
                  Object {
                    "grid": 12,
                    "label": "TROUBLE DESCRIPTION",
                    "name": "troubleDesc",
                  },
                ],
              },
              "title": "Report Description",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {
                  "status": "Checking",
                },
                "schema": Array [
                  Object {
                    "label": "SALESFORCE CATEGORY",
                    "name": "sfCategory",
                  },
                  Object {
                    "label": "SALESFORCE SUBCATEGORY",
                    "name": "sfSubCategory",
                  },
                ],
              },
              "title": "Salesforce Data",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {
                  "status": "Checking",
                },
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "Reference ID",
                    "name": "referenceId",
                  },
                  Object {
                    "label": "Service ID",
                    "name": "serviceId",
                  },
                  Object {
                    "label": "Ticket Number",
                    "name": "ticketId",
                  },
                  Object {
                    "label": "First Call Resolution",
                    "name": "firstCall",
                  },
                  Object {
                    "label": "Product",
                    "name": "productName",
                  },
                  Object {
                    "grid": 12,
                    "label": "Address",
                    "name": "serviceLocation",
                  },
                ],
              },
              "title": "Service Information",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": Object {
                  "status": "Checking",
                },
                "schema": Array [
                  Object {
                    "label": "PIC Name",
                    "name": "picName",
                  },
                  Object {
                    "label": "PIC Contact",
                    "name": "picPhoneNumber",
                  },
                  Object {
                    "grid": 12,
                    "label": "PIC Address",
                    "name": "picAddress",
                  },
                ],
              },
              "title": "PIC Customer",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {
                  "status": "Checking",
                },
                "schema": Array [
                  Object {
                    "converter": [Function],
                    "label": "Urgency",
                    "name": "urgency",
                  },
                  Object {
                    "converter": [Function],
                    "label": "Hard Complain",
                    "name": "hardComplaint",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "Symptoms",
                    "name": "symptompName",
                  },
                  Object {
                    "grid": 12,
                    "label": "Description",
                    "name": "descValidation",
                  },
                  Object {
                    "grid": 12,
                    "label": "OCC's Note",
                    "name": "occNoteValidation",
                  },
                ],
              },
              "title": "Fault Information",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {
                  "status": "Checking",
                },
                "schema": Array [
                  Object {
                    "label": "PIC Name",
                    "name": "picName2",
                  },
                  Object {
                    "label": "PIC Contact",
                    "name": "picNumber2",
                  },
                ],
              },
              "title": "PIC Internal",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {
                  "status": "Checking",
                },
                "schema": Array [
                  Object {
                    "label": "",
                    "name": "evidenceFiles",
                  },
                ],
              },
              "title": "Evidence",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "active": 0,
                "errors": null,
                "errorsLabel": null,
                "steps": Array [
                  "Report Checking",
                  "Report Issued",
                  "Fault Analysis",
                  "Fault Handling",
                  "Report Completion",
                  "Report Completed",
                ],
              },
              "title": "Fault Handling Step",
              "type": "stepper",
            },
            Object {
              "properties": Object {
                "data": undefined,
              },
              "title": "History Work Log",
              "type": "worklog",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
          "stickRight": true,
        },
      ]
    }
    search={null}
    status={
      Object {
        "children": "REPORT CHECKING",
        "variant": "primary",
      }
    }
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <ReturnForm
    fetchDetail={[MockFunction]}
    modalReturn={null}
    setModalReturn={[MockFunction]}
  />
  <ApproveIssueForm
    modalApproveIssue={null}
    setModalApproveIssue={[MockFunction]}
    setModalChooseCategory={[MockFunction]}
  />
  <ChooseCategoryForm
    fetchDetail={[MockFunction]}
    modalChooseCategory={null}
    setModalChooseCategory={[MockFunction]}
  />
</React.Fragment>
`;
